# desktop_develop

./: README.md
spice-server/: readme.txt  release_notes.txt  update_list.txt
spice-server/spice-0.12.5/: Makefile  config.h  config.status  configure  libtool  spice-server.pc  tags
spice-server/spice-0.12.5/client/: Makefile
spice-server/spice-0.12.5/docs/: Makefile
spice-server/spice-0.12.5/docs/manual/: Makefile  manual.txt  manual.txt.old  manual.xml
spice-server/spice-0.12.5/server/: Makefile  Makefile.am  Makefile.in  char_device.c  h264_encoder.c  h264_encoder.h  h264_type.h  red_channel.c  red_collection_media_data_threading.c  red_collection_media_data_threading.h  red_common.h  red_decoding_data.c  red_decoding_data.h  red_decoding_dispatcher.c  red_decoding_dispatcher.h  red_dispatcher.c  red_dispatcher.h  red_encoding_dispatcher.c  red_encoding_dispatcher.h  red_encoding_threading.c  red_encoding_threading.h  red_event.c  red_event.h  red_spice_common_defines.h  red_threading.c  red_threading.h  red_worker.c  red_worker.h  reds.c  spice-server.syms  spice.h  spice_timer_queue.c
spice-server/spice-0.12.5/spice-common/: Makefile  config.h  config.status  libtool  spice.proto  spice1.proto
spice-server/spice-0.12.6-ffmpeg/: .gitignore  .mailmap  AUTHORS  autogen.sh  cfg.mk  configure.ac  maint.mk  update_list.txt
spice-server/spice-0.12.6-ffmpeg/docs/manual/: manual.txt
spice-server/spice-0.12.6-ffmpeg/server/: .gitignore  Makefile.am  cache-item.h  cache_item.tmpl.c  char_device.c  char_device.h  cursor-channel.c  cursor-channel.h  dispatcher.c  dispatcher.h  display-channel.c  display-channel.h  ffmpeg_encoder.c  glz_encoder.h  glz_encoder_dictionary.c  gstreamer_encoder.c  main_dispatcher.c  main_dispatcher.h  mjpeg_encoder.c  pixmap-cache.c  pixmap-cache.h  red_bitmap_utils_tmpl.c  red_channel.c  red_channel.h  red_common.h  red_dispatcher.c  red_dispatcher.h  red_parse_qxl.c  red_parse_qxl.h  red_worker.c  red_worker.h  reds-private.h  reds.c  reds.h  reds_stream.c  spice-bitmap-utils.c  spice-bitmap-utils.h  spice-experimental.h  spice-qxl.h  spice-server.h  (+13 more)
spice-server/spice-0.12.6-ffmpeg/server/tests/: .gitignore  basic_event_loop.c  basic_event_loop.h  regression_test.py  replay.c  test_display_base.c  test_display_base.h  test_display_no_ssl.c  test_display_resolution_changes.c  test_display_streaming.c  test_display_width_stride.c  test_empty_success.c  test_fail_on_null_core_interface.c  test_just_sockets_no_ssl.c  test_playback.c  test_two_servers.c  test_util.h  test_vdagent.c
spice-server/spice-0.12.6-ffmpeg/spice-common/: autogen.sh  configure.ac
spice-server/spice-0.12.6-ffmpeg/spice-common/common/: Makefile.am  canvas_base.c  log.c  marshaller.c  ssl_verify.c
spice-server/spice-0.12.6-ffmpeg/spice-common/m4/: spice-deps.m4
spice-server/spice-0.12.6-ffmpeg/spice-common/tests/: Makefile.am  test-marshallers.c  test-marshallers.h  test-marshallers.proto
spice-server/spice-0.12.6-ffmpeg/spice-protocol/: Makefile.am  autogen.sh  configure.ac  includes.sed  rename-identifiers.sh  renames  spice-protocol.pc.in  spice.proto
spice-server/spice-0.12.6-ffmpeg/spice-protocol/python_modules/: Makefile.am
spice-server/spice-0.12.6-ffmpeg/spice-protocol/spice/: protocol.h
testwatch/: readme.txt  release_notes.txt  test.c  update_list.txt
thin_client/: readme.txt  release_notes.txt  update_list.txt
thin_client/spice-glib-0.26/: .makefile.swp  README  config.h  cscope.files  env.sh  makefile  spic-gtk.SearchResults  tags
thin_client/spice-glib-0.26/data/: spice_glib.nsis
thin_client/spice-glib-0.26/examples/: makefile  test_bmp  test_bmp.c
thin_client/spice-glib-0.26/glib/: .channel-inputs.c.swp  channel-display-h264.c  channel-display-mjpeg.c  channel-display-priv.h  channel-display.c  channel-inputs.c  channel-main.c  channel-playback.c  client_sw_canvas.h  config.h  coroutine_winfibers.c  decode-glz-tmpl.c  h264_decoder.c  makefile  spice-audio.c  spice-channel.c  spice-glib-enums.c  spice-gstaudio.c  spice-session-priv.h  spice-session.c  spice-version.h  usb-device-manager.c  usb-device-manager.h  win-usb-dev.h
thin_client/spice-glib-0.26/logger/: spice_log.h
thin_client/spice-glib-0.26/make/: configcommon.h  configglib.h  configwin32.h  makefileCommon  makefileExamples  makefileExamples_gst  makefileGlib  makefileGlib_gst  makefileWin32  wconfig.h  wconfigcommon.h  wmakefileCommon  wmakefileExamples  wmakefileGlib  wmakefileWin32
thin_client/spice-glib-0.26/spice-common/: Makefile_old  config.status  libtool  makefile
thin_client/spice-glib-0.26/win32/: .win32_spice_interface.c.swn  .win32_spice_interface.c.swo  .win32_spice_interface.c.swp  .win32_spice_interface.h.swp  config.h  create_bmp.c  create_bmp.h  makefile  spice-cmdline.h  spice-widget-enums.c  spice-widget-enums.h  virt-viewer-file.h  virt-viewer-util.h  win32-spice-widget-priv.h  win32-spice-widget.c  win32-spice-widget.h  win32-spicy.c  win32-spicy.h  win32_io.c  win32_io.h  win32_service.c  win32_service.h  win32_spice_interface.c  win32_spice_interface.h  win32_spice_interface_priv.h  win32_spice_interface_types.h
zhicloud_client/: readme.txt  release_notes.txt  up_install.sh  update_list.txt
zhicloud_client/cloud_teminal/: .Makefile.swp  .Makefile_old.swp  .SpiceMulViewer.cpp.swo  .SpiceMulViewer.cpp.swp  .cloud_client.log.swn  .fblsetwidget.cpp.swo  .fblsetwidget.cpp.swp  .mainwindow.cpp.swo  Makefile  Makefile_old  SpiceMulViewer.cpp  SpiceMulViewer.h  UpdateWidget.cpp  UpdateWidget.h  cdiagnoseitem.cpp  cdiagnoseitem.h  cesulabel.cpp  cesulabel.h  cfblbutton.cpp  cfblbutton.h  chostlist.cpp  chostlist.h  clabel.cpp  clabel.h  cleftarrawpwdedit.cpp  cleftarrawpwdedit.h  cloading.cpp  cloading.h  clogthred.cpp  clogthred.h  cloud_teminal  cloud_teminal.pro  cloud_teminal.pro_bak  cloud_teminal_plugin_import.cpp  cloud_terminal  cloud_terminal.cpp  cloud_terminal.h  cloud_terminal.qrc  cloud_terminal.sln  cloud_terminal.ui  (+92 more)
zhicloud_client/cloud_teminal/Resources/: t.txt
zhicloud_client/packet/include/: win32_spice_interface.h
(+118 files in other folders)
